# athena

./: .gitignore  README.md  config.toml  main.py  pyproject.toml  state.json
core/: clients.py  config.py
ingest/: pipeline.py
notebooks/: ingest.py  query.py
notebooks/__marimo__/session/: ingest.py.json
retrieval/: pipeline.py
test/sample_dir/: sample.md
