[project]
name = "athena"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.136.3",
    "llama-index>=0.14.22",
    "llama-index-embeddings-ollama>=0.9.0",
    "llama-index-llms-ollama>=0.10.1",
    "llama-index-vector-stores-qdrant>=0.10.1",
    "pydantic>=2.13.4",
    "qdrant-client>=1.18.0",
]

[dependency-groups]
dev = [
    "marimo>=0.23.8",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
] 

[tool.uv]
package = false

[tool.setuptools.packages.find]
where = ["."]

